--- a/style.css
+++ b/style.css
@@ -1,12 +1,43 @@
 h1 {font-family: "Orbitron";
     font-size: 250%;}
-h2 {font-family: "Calibri";}
+h2 {font-family: "Calibri";
+color: #c3d538;}
 body {
-    background-color: linear-gradient(to right, #0beb0b, rgb(0, 0, 255));
+    background: linear-gradient(to right, #187d18, rgb(68, 68, 202));
     align-items: center;
     display: flex;
     flex-direction: column; /* estos 3 parametros logran centrar el coneido*/
-    max-width: 20%;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-#operacion {width: 10%;}
+#productos, #Formulario, #video, video{
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 24rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
+
+button {
+    background-color: #4CAF50; /* Verde */
+    color: white;
+    border: #15529d solid 0.1rem;
+    border-radius: 20px;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+}
+
+video {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.oculto { /* esto ocultara por defecto elelemntos de clase "oculto*/
+  display: none;
+}
+
